# navigator

./: .dockerignore  .env.example  .env.local  .env.template  .env.test  .flake8  .gitattributes  .gitignore  .prettierignore  CHANGELOG.md  LICENSE.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  makefile-docker.defs  makefile-local.defs
backend/: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  conftest.py  pyproject.toml
backend-base/: Dockerfile  build.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_users_table.py  0001_init.py  0001_squashed.py  0002_add_geo_statistics.py  0002_create_initial_database_structure.py  0002_populate_lookups.py  0003_add_constraint_to_documents.py  0003_added_document_relationships.py  0003_populate_lookups.py  0004_add_doc_slug_and_unique_id.py  0004_add_unique_constraint_to_language_code.py  0004_fix_source_table_column_type.py  0004_modify_document_table_fields.py  0005_add_category_tables.py  0005_add_uniqeness_constraint_to_action.py  0005_allow_document_md5sum_nullable.py  0005_litigation.py  0006_add_cdn_object_to_document_table.py  0006_add_content_type.py  0006_change_action_description_column_length_.py  0006_litigation.py  0006_make_lookup_names_unique.py  0007_add_content_type.py  0007_add_document_language_lookup.py  0007_change_action_name_column_length_.py  0008_add_enum_to_document_to_represent_.py  0008_change_category_from_multi_to_single.py  0008_change_category_from_multi_to_single_.py  0008_import_id_and_slug_unique_and_not_null.py  0009_add_extra_user_fields.py  0009_add_geography_slugs.py  0009_add_title_postfix.py  0009_extend_unique_constraint_on_instrument_.py  0010_add_geography_slugs.py  0010_add_table_activation_token.py  0010_add_table_password_reset_token.py  0010_populate_lookups.py  0011_add_document_description_and_keyword.py  0011_make_user_password_nullable.py  0012_add_md5sum_to_document.py  (+7 more)
backend/app/: admin.py  conftest.py  initial_data.py  main.py
backend/app/aws/: clients.py
backend/app/core/: __init__.py  auth.py  aws.py  browse.py  config.py  email.py  health.py  jit_query_wrapper.py  lookups.py  ratelimit.py  search.py  search_cache_wrapper.py  security.py  sensitive_query_terms.tsv  util.py
backend/app/data_migrations/: __init__.py  populate_category.py  populate_document_type.py  populate_framework.py  populate_geo_statistics.py  populate_geography.py  populate_hazard.py  populate_instrument.py  populate_keyword.py  populate_language.py  populate_sector.py  populate_source.py  populate_topic.py  utils.py
backend/app/db/: crud.py  models.py  schemas.py  session.py
backend/app/dto/: action.py  document.py  metadata.py
backend/app/tests/: test_main.py
backend/docs/: migrations.md
backend/scripts/: cleanup_lookups.py
backend/scripts/add_unique_ids/: README.md  add_unique_ids.py  ids_map.json
backend/scripts/cases/: config.py  data_load.py  db_load.py  verify.py
backend/scripts/cleanup_lookups/: cleanup_lookups.py  keyword_map.csv
backend/scripts/import_doc_postfix/: README.md  import_doc_postfix.py
backend/scripts/import_doc_relationships/: README.md  import_doc_relationships.py
backend/scripts/litigation/: config.py  db_load.py  transform.py  transform_and_load.py  utils.py  verify.py
backend/scripts/migrate_doc_assocs/: README.md  migrate_doc_assocs.py
backend/scripts/testing/: copy_volume.sh  diff_document_details_related_documents.py  dump_document_details.py  get_all_documents.sh
backend/scripts/users_add/: README.md  main.py  test_main.py
backend/tests/: conftest.py  utils.py
backend/tests/data/: description_embs_dim_768_msmarco-distilbert-dot-v5_20220721-1547.memmap  ids_msmarco-distilbert-dot-v5_20220721-1547.json  navigator_test_core.json  navigator_test_core.mapping.json  navigator_test_core.settings.json  navigator_test_htmls_non_translated.json  navigator_test_htmls_non_translated.mapping.json  navigator_test_htmls_non_translated.settings.json  navigator_test_htmls_translated.mapping.json  navigator_test_htmls_translated.settings.json  navigator_test_pdfs_non_translated.json  navigator_test_pdfs_non_translated.mapping.json  navigator_test_pdfs_non_translated.settings.json  navigator_test_pdfs_translated.json  navigator_test_pdfs_translated.mapping.json  navigator_test_pdfs_translated.settings.json  test_opensearch_analyzer.dump
loader/: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
loader/alembic/: env.py  generate-sql.sh
loader/app/: create_csv.py  main.py  mapping.py  model.py
loader/csvkit/: find_by_title.sh  select_number_of_events_and_docs.sh
loader/data/: Master sheet completed.xlsx  Single doc action doc type fixes.xlsx  cclw_new_format_20220503.csv  geo-stats-Aug2022.csv  laws_and_policies_16022022.csv  loader_data.csv
pipeline/: Dockerfile  README.md  anotherthrowaway.ipynb  certificate_pub.crt  failurepdfs.txt  investigate_hyphen_wrapping.ipynb  investigate_hyphen_wrapping.py  pdf2text.py  postprocess.py  ppres.json  pyproject.toml  reformat_adobe_output.py  temp-adobe-postprocess-sup-sub.ipynb  temp-adobe-processing.ipynb  temp-adobe.json  test_postprocess.py  throwaway.ipynb  throwaway.py
pipeline/.devcontainer/: devcontainer.json
pipeline/extract/: document.py  exceptions.py  extract.py  utils.py
pipeline/notebooks/: data-to-document.ipynb  experiment-analysing-failure-logs.ipynb
pipeline/processor/: investigate_hyphen_wrapping.ipynb  postprocessor.py  utils.py
pipeline/test/: test_extract.py  test_processor.py
search-index/: .env.example  Dockerfile  Makefile  README.md  docker-compose.opensearch.yml  index_data.py  opensearch-query-example-exact.ipynb  opensearch-query-example-semantic.ipynb  opensearch-query-example.ipynb  opensearch_cloudwatch_alarms.py  pyproject.toml  sql-query.ipynb  text2embeddings.py
search-index/app/: db.py  index.py  load_data.py  ml.py  transform.py  utils.py
search-index/notebooks/: opensearch-query-example.ipynb  query-load-testing.ipynb
search-index/test/: test_text2embeddings.py
(+654 files in other folders)
