[tool.poetry]
name = "navigator_backend_base"
version = "0.0.1"
description = ""
authors = ["CPR-dev-team <tech@climatepolicyradar.org>"]

[tool.poetry.dependencies]
python = "^3.9"
alembic = "^1.7.6"
Authlib = "^0.15.5"
bcrypt = "^3.2.0"
fastapi = "^0.74.0"
fastapi-pagination = { extras = ["sqlalchemy"], version = "^0.9.1" }
httpx = "^0.22.0"
itsdangerous = "^2.1.0"
opensearch-py = "^1.1.0"
pandas = "^1.4.1"
passlib = "^1.7.4"
psycopg2-binary = "^2.9.3"
PyJWT = "^2.3.0"
python-multipart = "^0.0.5"
sentence-transformers = "^2.2.0"
sendgrid = "^6.9.7"
SQLAlchemy = "^1.4.31"
SQLAlchemy-Utils = "^0.38.2"
fastapi-health = "^0.4.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
slowapi = "^0.1.5"
boto = "^2.49.0"
tenacity = "^8.0.1"
json-logging = "^1.3.0"
