[tool.poetry]
name = "navigator_backend"
version = "0.1.0"
description = ""
authors = ["chrisaballard <chris@climatepolicyradar.org>", "kalyandutia <kalyan@climatepolicyradar.org>", "paulahightower <paula@climatepolicyradar.org>"]

[tool.poetry.dependencies]
python = "^3.8"
alembic = "^1.7.6"
Authlib = "^0.15.5"
bcrypt = "^3.2.0"
fastapi = "^0.74.0"
fastapi-pagination = { extras = ["sqlalchemy"], version = "^0.9.1" }
httpx = "^0.22.0"
itsdangerous = "^2.1.0"
navigator = { path = "../common", develop = true }
pandas = "^1.4.1"
passlib = "^1.7.4"
psycopg2-binary = "^2.9.3"
PyJWT = "^2.3.0"
python-multipart = "^0.0.5"
SQLAlchemy = "^1.4.31"
SQLAlchemy-Utils = "^0.38.2"
uvicorn = "^0.17.5"

[tool.poetry.dev-dependencies]
moto = { version = "^3.0.3", extras = ["s3"] }
pre-commit = "^2.17.0"
python-dotenv = "^0.19.2"
pytest = "^7.0.1"
pydocstyle = { version = "^6.1.1", extras = ["pydocstyle[toml]"] }
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
env_files = """
    .env.test
    .env
"""

[tool.pydocstyle]
# D100 - Missing docstring in public module
# D103 - Missing docstring in public function
# D104 - Missing docstring in public package
# D107 - Missing docstring in __init__
# D202 - No blank lines allowed after function docstring
# D203 - 1 blank line required before class docstring
# D213 - Multi-line docstring summary should start at the second line
# D400 - First line should end with a period
# D401 - First line should be in imperative mood (Google styleguide denotes 'descriptive' style.)
# D406 - Section name should end with a newline (incompatible with Google styleguide)
# D407 - Missing dashed underline after section (incompatible with Google styleguide)
# D413 - Missing blank line after last section (incompatible with Google styleguide)
# D415 - First line should end with a period, question mark, or exclamation point
ignore = """
D100,D103,D104,D107,
D202,D203,D213,
D400,D401,D406,D407,D413,D415
"""
