[tool.poetry]
name = "navigator_backend"
version = "0.1.0"
description = ""
authors = ["CPR-dev-team <tech@climatepolicyradar.org>"]

[tool.poetry.dependencies]
python = "^3.9"
alembic = "^1.7.6"
Authlib = "^0.15.5"
bcrypt = "^3.2.0"
boto3 = "^1.26"
fastapi = "^0.74.0"
fastapi-health = "^0.4.0"
fastapi-pagination = { extras = ["sqlalchemy"], version = "^0.9.1" }
httpx = "^0.22.0"
itsdangerous = "^2.1.0"
json-logging = "^1.3.0"
opensearch-py = "^1.1.0"
pandas = "^1.4.1"
passlib = "^1.7.4"
psycopg2-binary = "^2.9.3"
PyJWT = "^2.3.0"
python-multipart = "^0.0.5"
python-slugify = "^6.1.2"
sentence-transformers = "^2.2.0"
sendgrid = "^6.9.7"
slowapi = "^0.1.5"
SQLAlchemy = "^1.4.31"
SQLAlchemy-Utils = "^0.38.2"
tenacity = "^8.0.1"
torch = "^1.13.0"
uvicorn = { extras = ["standard"], version = "^0.17.6" }

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
moto = { version = "^3.0.3", extras = ["s3"] }
pre-commit = "^2.17.0"
python-dotenv = "^0.19.2"
pytest = "^7.0.1"
pytest-dotenv = "^0.5.2"
pytest-mock = "^3.7.0"
pydocstyle = { version = "^6.1.1", extras = ["pydocstyle[toml]"] }
black = "^22.1.0"
pyright = "^1.1.267"
pytest-asyncio = "^0.18.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
env_files = """
    .env.test
    .env
"""
markers = [
    "search",
    "unit",
]
asyncio_mode = "strict"

[tool.pydocstyle]
# D100 - Missing docstring in public module
# D103 - Missing docstring in public function
# D104 - Missing docstring in public package
# D107 - Missing docstring in __init__
# D202 - No blank lines allowed after function docstring
# D203 - 1 blank line required before class docstring
# D212 - Multi-line docstring summary should start at the first line (while we transition format)
# D213 - Multi-line docstring summary should start at the second line
# D400 - First line should end with a period
# D401 - First line should be in imperative mood (Google styleguide denotes 'descriptive' style.)
# D406 - Section name should end with a newline (incompatible with Google styleguide)
# D407 - Missing dashed underline after section (incompatible with Google styleguide)
# D413 - Missing blank line after last section (incompatible with Google styleguide)
# D415 - First line should end with a period, question mark, or exclamation point
ignore = """
D100,D103,D104,D107,
D202,D203,D212,D213,
D400,D401,D406,D407,D413,D415
"""

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"
per-file-ignores = "__init__.py:F401"

[tool.black]
line-length = 88
target-version = ['py39']
