[tool.poetry]
name = "pipeline"
version = "0.1.0"
description = ""
authors = ["Chris Ballard <chris@climatepolicyradar.org>"]

[tool.poetry.dependencies]
python = "^3.8"
navigator = {path = "../common", develop = true }

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
