[tool.poetry]
name = "pipeline"
version = "0.1.0"
description = ""
authors = ["Chris Ballard <chris@climatepolicyradar.org>"]

[tool.poetry.dependencies]
python = "^3.8"
PyPDF2 = "^1.26.0"
pdfservices-sdk = "1.0.1"
navigator = {path = "../common", develop = true }
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
